--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,11 +9,7 @@
     <link rel="stylesheet" type="text/css" href="app.css">
   </head>
   <body>
-    <div class="header">
-      <div>Please use Chrome to view this page :)</div>
-      <div><a href="#">Payment Rule</a></div>
-      <div><a href="#">Claim Rule</a></div>
-    </div>
+    <div class="header"></div>
     <div class="react-wrapper"></div>
     <div class="react-sub-wrapper"></div>
   </body>
